--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>MPV Remote Control</title>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
@@ -38,15 +38,18 @@
         }
 
         .controls {
-            display: flex;
+            display: grid;
+            grid-template-columns: auto auto auto;
             align-items: center;
             justify-content: space-evenly;
+            align-content: center;
+            gap: 20px;
             height: 100%;
             width: 100%;
         }
 
         .controls > button {
-            font-size: 40px;
+            font-size: 30px;
         }
     </style>
 </head>
@@ -65,8 +68,8 @@
                 <button
                     type="button"
                     x-data
-                    x-on:click="$store.command(['seek', -30, 'relative+exact'])"
-                >-30s</button>
+                    x-on:click="$store.command(['seek', -10, 'relative+exact'])"
+                >-10s</button>
         
                 <button
                     type="button"
@@ -78,12 +81,40 @@
                 <button
                     type="button"
                     x-data
-                    x-on:click="$store.command(['seek', 30, 'relative+exact'])"
-                >+30s</button>
+                    x-on:click="$store.command(['seek', 10, 'relative+exact'])"
+                >+10s</button>
+
+                <button
+                    type="button"
+                    x-data
+                    x-on:click="$store.command(['set_property', 'volume', $store.volume - 5])"
+                >-5v</button>
+
+                <div></div>
+
+                <button
+                    type="button"
+                    x-data
+                    x-on:click="$store.command(['set_property', 'volume', $store.volume + 5])"
+                >+5v</button>
+
+                <button
+                    type="button"
+                    x-data
+                    x-on:click="$store.command(['set_property', 'speed', $store.speed - 0.1])"
+                >-0.1s</button>
+
+                <div></div>
+
+                <button
+                    type="button"
+                    x-data
+                    x-on:click="$store.command(['set_property', 'speed', $store.speed + 0.1])"
+                >+0.1s</button>
             </div>
     
             <div x-show="$store.path">Current playback time: <span x-data x-text="$store.playbackTime"></span> / <span x-data x-text="$store.duration"></span></div>
-            <div>Volume: <span x-data x-text="$store.volume"></span></div>
+            <div>Volume: <span x-data x-text="$store.volume"></span> | Speed: <span x-data x-text="$store.speed"></span></div>
             <div>Path: <span x-data x-text="$store.path || 'No file selected'"></span></div>
         </div>
     </div>
