--- a/front/index.html
+++ b/front/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="http://localhost:8080/favicon.png">
+    <meta name="theme-color" content="#000" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
     <title>MPV Remote Control</title>
 </head>
 
